@@ -138,7 +138,7 @@
 #endif
 
 #ifndef CONFIG_NXWM_DEFAULT_SHADOWEDGECOLOR
-#  define CONFIG_NXWM_DEFAULT_SHADOWEDGECOLOR  MKRGB(0,0,0)
+#  define CONFIG_NXWM_DEFAULT_SHADOWEDGECOLOR  MKRGB(35,58,73)
 #endif
 
 /**
@@ -291,11 +291,11 @@
 #endif
 
 #ifndef CONFIG_NXWM_NXCONSOLE_WCOLOR
-#  define CONFIG_NXWM_NXCONSOLE_WCOLOR  MKRGB(192,192,192)
+#  define CONFIG_NXWM_NXCONSOLE_WCOLOR  CONFIG_NXWM_DEFAULT_BACKGROUNDCOLOR
 #endif
 
 #ifndef CONFIG_NXWM_NXCONSOLE_FONTCOLOR
-#  define CONFIG_NXWM_NXCONSOLE_FONTCOLOR  MKRGB(0,0,0)
+#  define CONFIG_NXWM_NXCONSOLE_FONTCOLOR  CONFIG_NXWM_DEFAULT_FONTCOLOR
 #endif
 
 #ifndef CONFIG_NXWM_NXCONSOLE_FONTID
