@@ -532,8 +532,8 @@ CONFIG_NX_PACKEDMSFIRST=n
 CONFIG_NX_MOUSE=y
 CONFIG_NX_KBD=y
 #CONFIG_NXTK_BORDERWIDTH=4
-CONFIG_NXTK_BORDERCOLOR1=0x00a9a9a9
-CONFIG_NXTK_BORDERCOLOR2=0x00696969
+CONFIG_NXTK_BORDERCOLOR1=0x005a96bd
+CONFIG_NXTK_BORDERCOLOR2=0x00233a49
 CONFIG_NXTK_AUTORAISE=n
 CONFIG_NXFONT_SANS22X29=n
 CONFIG_NXFONT_SANS23X27=y
@@ -565,6 +565,7 @@ CONFIG_NXWIDGETS_SERVERSTACK=16384
 CONFIG_NXWIDGETS_LISTENERSTACK=8192
 CONFIG_NXWIDGETS_DEFAULT_BACKGROUNDCOLOR=MKRGB(148,189,215)
 CONFIG_NXWIDGETS_DEFAULT_SELECTEDBACKGROUNDCOLOR=MKRGB(206,227,241)
+CONFIG_NXWIDGETS_DEFAULT_SHADOWEDGECOLOR=MKRGB(35,58,73)
 
 CONFIG_NXWM_TASKBAR_LEFT=y
 CONFIG_NXWM_NXCONSOLE_STACKSIZE=8192
